--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=.;Database=TimeSheetDb;Trusted_Connection=True"
+    "DefaultConnection":"Server=localhost;Database=TimeSheetDb;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
