--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -9,6 +9,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailConfiguration": {
+    "From": "testmailzaservis@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "testmailzaservis@gmail.com",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
 
