--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -9,12 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "EmailConfiguration": {
-    "From": "testmailzaservis@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "Username": "testmailzaservis@gmail.com",
-    "Password": ""
+  "MailSettings": {
+    "Mail": "wilburn.kling36@ethereal.email",
+    "Password": "aNJjwPHTZJZFrz3Wwn",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
   },
   "AllowedHosts": "*"
 }
