--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -10,9 +10,9 @@
     }
   },
   "MailSettings": {
-    "Mail": "wilburn.kling36@ethereal.email",
-    "Password": "aNJjwPHTZJZFrz3Wwn",
-    "Host": "smtp.ethereal.email",
+    "Mail": "dejandavidovic76@yahoo.com",
+    "Password": "Pass@123",
+    "Host": "smtp.mail.yahoo.com",
     "Port": 587
   },
   "AllowedHosts": "*"
