--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -11,7 +11,7 @@
   },
   "MailSettings": {
     "Mail": "dejandavidovic76@yahoo.com",
-    "Password": "Pass@123",
+    "Password": "dexdexdex",
     "Host": "smtp.mail.yahoo.com",
     "Port": 587
   },
