--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -9,11 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "MailSettings": {
-    "Mail": "dejandavidovic76@yahoo.com",
-    "Password": "dexdexdex",
-    "Host": "smtp.mail.yahoo.com",
-    "Port": 587
+  "EmailConfiguration": {
+    "From": "testmailzaservis@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "testmailzaservis@gmail.com",
+    "Password": "rqraztvogaljrksn"
   },
   "AllowedHosts": "*"
 }
