--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -14,7 +14,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "testmailzaservis@gmail.com",
-    "Password": "rqraztvogaljrksn"
+    "Password": "null"
   },
   "AllowedHosts": "*"
 }
