auth with identity,controller rework,automapper

--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -16,6 +16,11 @@
     "Username": "testmailzaservis@gmail.com",
     "Password": "null"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "mycustomkey123abc4567def",
+    "Issuer": "https://localhost:44381",
+    "Audience": "https://localhost:44381"
+  }
 }
 
