--- a/TimeSheet/appsettings.json
+++ b/TimeSheet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TimeSheetDb;Trusted_Connection=True"
+    "DefaultConnection": "Server=localhost;Database=TimeSheetDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -18,9 +18,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "mycustomkey123abc4567def",
-    "Issuer": "https://localhost:44381",
-    "Audience": "https://localhost:44381"
+    "Key": "mycustomkey123abcmycustomkey123efghmycustomkey123ddd",
+    "Issuer": "https://localhost:29468",
+    "Audience": "https://localhost:29468"
   }
 }
 
